dep updates